test/compile-fail/resolution/use/super-super/expected.txt
error: there are too many leading `super` keywords
 --> top.rhdl:2:15
  |
2 |     use super::super::*;
  |                ^^^^^ goes beyond the crate root
